fix menu item vertical spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -98,6 +98,13 @@ body {
     padding-top: 4 * $MENU-ITEM-SPACING;
   }
 
+  .menu-item-post-container {
+    @include media-query(DESKTOP) {
+      line-height: 0.8;
+      padding-bottom: 10px;
+    }
+  }
+
   .menu-item-post {
     display: inline;
   }
